Nueva pagina y arreglos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <title>Vivaverde</title>
+    <title>Monlogo</title>
   </head>
   <body>
     <!-- menu-->
@@ -19,8 +19,8 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Categorías</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="servicios.html">Servicios</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Cómo funcionamos</a></li>
               <li class="nav-item"><a class="nav-link" href="#">blog</a></li>
             </ul>
@@ -28,15 +28,15 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto iconos__m">
               <li class="nav-item"><a class="nav-link" href="#"><img class="iconos__menu" src="img/iconos/facebook.png" alt="icono facebook"/></a></li>
-              <li class="nav-item"><a class="nav-link" href="#"><img class="iconos__menu" src="img/iconos/instagram.png" alt="icono instagram"/></a></li>
-              <li class="nav-item"><a class="nav-link" href="#"><img class="iconos__menu" src="img/iconos/whatsapp.png" alt="icono whatsapp"/></a></li>
+              <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/monlogoteam"><img class="iconos__menu" src="img/iconos/instagram.png" alt="icono instagram"/></a></li>
+              <li class="nav-item"><a class="nav-link" href="https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda"><img class="iconos__menu" src="img/iconos/whatsapp.png" alt="icono whatsapp"/></a></li>
             </ul>
           </div><a class="btn btn-outline-secondary d-none d-lg-inline-block mb-3 mb-md-0 ml-md-3" href="#">Contacto</a>
         </div>
       </nav>
     </header>
     <!-- hero-->
-    <section class="hero-index">
+    <section class="hero-index hero">
       <div class="opacity--darken">
         <div class="container">
           <div class="hero__title">
@@ -61,7 +61,7 @@
           <div class="col-sm-2 col-12 d-flex align-items-end justify-content-center"><a href="#">ver más ></a></div>
         </div>
         <div class="carousel-mon" data-scrollable="data-scrollable">
-          <div class="carousel__container d-flex justify-content-md-center" data-scrollable-inner="data-scrollable-inner" style="margin-top: -10px; bottom: -57px;"><a href="inicio_proyectos.html">
+          <div class="carousel__container d-flex justify-content-md-center" data-scrollable-inner="data-scrollable-inner" style="margin-top: -10px; bottom: -57px;"><a href="servicios.html">
               <div class="carousel-item-mon"><img class="carousel-item__img" src="img/001_rev1.jpg" alt="projectproject 1"/>
                 <div class="carousel-item__details"><img class="carousel-item__details--img" src="img/001_rev1.jpg" alt="Play icon"/>
                   <h2 class="carousel-item__details--title">title</h2>
@@ -107,6 +107,7 @@
         </div>
       </div>
     </section>
+    <!-- faq-->
     <!-- faq-->
     <section class="faq-index">
       <div class="container">
@@ -284,8 +285,8 @@
                 <p>Ayuda</p></a><a href="#">
                 <p>Blog</p></a></div>
             <div class="col-md-1 d-none d-md-block">
-              <h5>Servicios</h5><a href="#">
-                <p>Categorías</p></a><a href="#">
+              <h5>¿Qué hacemos?</h5><a href="servicios.html">
+                <p>Servicios</p></a><a href="#">
                 <p>Proyectos</p></a>
             </div>
           </div>
@@ -295,7 +296,7 @@
                 <p class="p-1">Condiciones</p></a><a href="#">
                 <p class="p-1">Mapa del sitio</p></a><img class="img__planeta" src="img/iconos/planeta.png" alt="planeta"/><a href="#">
                 <p class="p-1">español</p></a><a href="#">
-                <p class="p-1">English</p></a><a class="ml-md-auto" href="#"><img src="img/iconos/facebook.png" alt="facebook"/></a><a href="#"><img src="img/iconos/instagram.png" alt="instagram"/></a><a href="#"><img src="img/iconos/whatsapp.png" alt="facebook"/></a></div>
+                <p class="p-1">English</p></a><a class="ml-md-auto" href="#"><img src="img/iconos/facebook.png" alt="facebook"/></a><a href="https://www.instagram.com/monlogoteam"><img src="img/iconos/instagram.png" alt="instagram"/></a><a href="https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda"><img src="img/iconos/whatsapp.png" alt="facebook"/></a></div>
           </div>
           <div class="pd--monlogo container d-block d-sm-none">
             <div class="row d-flex justify-content-center">
@@ -308,7 +309,7 @@
               <div class="col-12"><img class="img__planeta" src="img/iconos/planeta.png" alt="planeta"/><a href="#">
                   <p class="p-1">español</p></a><a href="#">
                   <p class="p-1">English</p></a></div>
-              <div class="col-12"><a class="ml-md-auto" href="#"><img src="img/iconos/facebook.png" alt="facebook"/></a><a href="#"><img src="img/iconos/instagram.png" alt="instagram"/></a><a href="#"><img src="img/iconos/whatsapp.png" alt="facebook"/></a></div>
+              <div class="col-12"><a class="ml-md-auto" href="#"><img src="img/iconos/facebook.png" alt="facebook"/></a><a href="https://www.instagram.com/monlogoteam"><img src="img/iconos/instagram.png" alt="instagram"/></a><a href="https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda"><img src="img/iconos/whatsapp.png" alt="facebook"/></a></div>
             </div>
           </div>
         </div>
