Escritos index crudo

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="container">
           <div class="hero__title">
             <div class="hero__title--text">
-              <h1 class="text-left">Lorem ipsum dolor<br/>sit amet consectetur adipi</h1>
-              <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias porro suscipit explicabo sapiente perspiciatis quae voluptatibus sequi facilis optio beatae debitis fuga omnis consectetur harum aliquid maxime, dolorem veritatis iure.</h6><a href="#">
+              <h1 class="text-left">Lleva tu marca al<br/>siguiente nivel</h1>
+              <h6>Nos dedicamos a diseñar y desarrollar productos increíbles para la web y llevar a tu marca al siguiente nivel. Haremos que tu marca sea memorable para las personas y u punto de referencia para tu industria.</h6><a href="#">
                 <button class="btn btn-primary" type="button">contáctenos</button></a>
             </div>
           </div>
@@ -54,30 +54,36 @@
       <div class="container-fluid">
         <div class="row categories__title">
           <div class="col-sm-9 col-12 categories__title--text">
-            <h1 class="text--left">Categorías: Diseño, pagina web, y más!</h1>
+            <h1 class="text--left">Diseñamos identidad corporativa, paginás web, y más!</h1>
             <div class="line__vertical-01"></div>
-            <h6>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias porro suscipit explicabo sapiente perspiciatis quae voluptatibus sequi facilis optio beatae debitis fuga omnis consectetur harum aliquid maxime</h6>
+            <h6>Creamos diseños y desarrollo web que este a la altura de tu negocio. Presiona en la imagen para ver los pack que ofrecemos en cada categoría</h6>
           </div>
-          <div class="col-sm-2 col-12 d-flex align-items-end justify-content-center"><a href="#">ver más ></a></div>
+          <div class="col-sm-2 col-12 d-flex align-items-end justify-content-center"><a href="servicios.html">ver más ></a></div>
         </div>
         <div class="carousel-mon" data-scrollable="data-scrollable">
           <div class="carousel__container d-flex justify-content-md-center" data-scrollable-inner="data-scrollable-inner" style="margin-top: -10px; bottom: -57px;"><a href="servicios.html">
               <div class="carousel-item-mon"><img class="carousel-item__img" src="img/001_rev1.jpg" alt="projectproject 1"/>
-                <div class="carousel-item__details"><img class="carousel-item__details--img" src="img/001_rev1.jpg" alt="Play icon"/>
-                  <h2 class="carousel-item__details--title">title</h2>
-                  <p class="carousel-item__details--subtitle">Duis mollis porttitor ligula.</p>
+                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/001_rev1.jpg" alt="Play icon"/>
+                    <h6 class="carousel-item__details--title">Identidad Corporativa</h6></span>
+                  <h3 class="carousel-p">Identidad Corporativa</h3>
+                  <p class="carousel-item__details--subtitle">Crea con nosotros la imagen de tu marca</p>
+                  <p class="carousel-item__details--button">Para saber más -></p>
                 </div>
               </div></a><a href="#">
               <div class="carousel-item-mon"><img class="carousel-item__img" src="img/002_rev1.jpg" alt="projectproject 2"/>
-                <div class="carousel-item__details"><img class="carousel-item__details--img" src="img/002_rev1.jpg" alt="Play icon"/>
-                  <h2 class="carousel-item__details--title">title</h2>
-                  <p class="carousel-item__details--subtitle">subtitle</p>
+                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/002_rev1.jpg" alt="Play icon"/>
+                    <h6 class="carousel-item__details--title">Diseño user interface</h6></span>
+                  <h3 class="carousel-p">Diseño user interface</h3>
+                  <p class="carousel-item__details--subtitle">Crearemos el diseño de tu proximo website</p>
+                  <p class="carousel-item__details--button">Para saber más -></p>
                 </div>
               </div></a><a href="#">
               <div class="carousel-item-mon"><img class="carousel-item__img" src="img/003_rev1.jpg" alt="projectproject 3"/>
-                <div class="carousel-item__details"><img class="carousel-item__details--img" src="img/003_rev1.jpg" alt="Play icon"/>
-                  <h2 class="carousel-item__details--title">title</h2>
-                  <p class="carousel-item__details--subtitle">subtitle</p>
+                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/003_rev1.jpg" alt="Play icon"/>
+                    <h6 class="carousel-item__details--title">Paginas web</h6></span>
+                  <h3 class="carousel-p">Paginas web</h3>
+                  <p class="carousel-item__details--subtitle">Hagamos una pagina web increíble</p>
+                  <p class="carousel-item__details--button">Para saber más -></p>
                 </div>
               </div></a>
           </div>
@@ -95,10 +101,10 @@
             <div class="col-md-6 col-12">
               <div class="us__title">
                 <div class="us__title--text">
-                  <h1 class="text--left">Lorem ipsum dolor</h1>
+                  <h1 class="text--left">Nos gusta crear</h1>
                   <div class="line__vertical-02"></div>
-                  <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus molestias officiis maxime quas pariatur, distinctio commodi et corrupti quibusdam, fuga ratione illo in nesciunt, architecto dolorem quis assumenda earum explicabo.fuga ratione illo in nesciunt, architecto dolorem quis assumenda earum explicabo.</h6>
-                  <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit quasi. Architecto aspernatur, ab qui officiis placeat porro enim ipsam iste numquam, eaque illo!</h6><a href="#">
+                  <h6>Hey! Somos el equipo de monlogo, nos dedidacamos a crear la imagen de una marca, tanto en la web como de forma fisica, tenemos la misión de hacer que tu marca logre llegar a muchas más personas y sea más acecible.</h6>
+                  <h6>Nuestra filosofia de trabajo es que crear junto al cliente un producto satisfactorio.</h6><a href="#">
                     <button class="btn btn-secondary" type="button">ver más</button></a>
                 </div>
               </div>
@@ -113,7 +119,7 @@
       <div class="container">
         <div class="faq-index__title">
           <div class="faq-index__title--text">
-            <h1>Lorem ipsum sarel</h1>
+            <h1>Como operamos en Monlogo</h1>
             <div class="line__vertical-03"></div>
           </div>
         </div>
@@ -122,9 +128,9 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-7 col-10 offset-1 offset-md-0 pb-3">
-                  <h6 class="text-sm-left text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique quod placeat atque eveniet esse. Mollitia dolorum possimus eveniet.</h6>
+                  <h6 class="text-sm-left text-center">Si tienes dudas, aqui abajo hemos dejado algunas preguntas con sus respectivas respectivas respuestas.</h6>
                   <ul class="wow faq-list fadeInUp" id="faq-list" style="visibility: visible; animation-name: fadeInUp;">
-                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq1">¿Qué es una marca comercial?</a>
+                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq1">¿Porque elegir a monlogo?</a>
                       <div class="collapse" id="faq1">
                         <p>
                           La marca comercial es el signo con que 
@@ -133,7 +139,7 @@
                         </p>
                       </div>
                     </li>
-                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq2">¿Qué es el registro de marca?</a>
+                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq2">¿Cómo trabajamos?</a>
                       <div class="collapse" id="faq2">
                         <p>
                           La marca comercial es el signo con que 
@@ -142,7 +148,7 @@
                         </p>
                       </div>
                     </li>
-                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq3">¿Qué se puede registrar como Marca?</a>
+                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq3">¿Por donde los contacto?</a>
                       <div class="collapse" id="faq3">
                         <p>
                           La marca comercial es el signo con que 
@@ -151,7 +157,7 @@
                         </p>
                       </div>
                     </li>
-                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq4">¿Qué son las clases de productos y servicios?</a>
+                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq4">¿Cuál es la metodología de pago? ¿Comó pago?</a>
                       <div class="collapse" id="faq4">
                         <p>
                           La marca comercial es el signo con que 
@@ -176,79 +182,61 @@
       <div class="container">
         <div class="modus__title">
           <div class="modus__title--text">
-            <h1 class="text-center">lorem ipsum dolor</h1>
-            <h5 class="text-center">Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo.</h5>
+            <h1 class="text-center">Trabajamos de dos maneras distintas. Tú eliges</h1>
+            <h5 class="text-center">Nuestro método de trabajo se divide en dos formas de contantración, elige el que mejor se adecue a ti</h5>
           </div>
         </div>
         <div class="modus__object">
           <div class="row">
             <div class="col-md-6 col-12 modus__box">
               <div class="modus--img"><img src="img/001_rev1.jpg" alt=""/></div>
-              <h3>Lorem ipsum dolor</h3>
-              <h6>lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam</h6>
+              <h3>Proyecto por fases</h3>
+              <h6>El servicio que contrates se dividirá por fases, y pagaras una suma pequeña cada vez que una fase se termine</h6>
             </div>
             <div class="line__horizontal-01"></div>
             <div class="col-md-6 col-12 modus__box">
               <div class="modus--img"><img src="img/001_rev1.jpg" alt=""/></div>
-              <h3>Lorem ipsum dolor</h3>
-              <h6>lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam lobortis. Maecenas leo nulla, ornare varius diamlobortis. Maecenas leo nulla, ornare varius diam</h6>
+              <h3>Unir packs de servicios</h3>
+              <h6>Aquí uniremos varios packs que usted necesite, y pagará cada uno una vez que se comience el trabajo</h6>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- contact 1-->
-    <section class="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-7 col-12">
-            <div class="contact-1__title">
-              <div class="contact-1--text">
-                <h4 class="text-left">Lorem ipsum dolor ipsum dolor</h4>
-                <div class="line__vertical-06"></div>
-                <h6 class="text-left">Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo. ornare varius diam eget, commodo.</h6>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 col-6 d-flex justify-content-end contact__btn p-0"><a href="#">
-              <button class="btn btn-lighting" type="button">Contactenos</button></a></div>
-          <div class="col-md-3 col-6 contact__btn p-0"><a href="#">
-              <button class="btn btn-secondary" type="button">Cómo funcionamos</button></a></div>
-        </div>
-      </div>
-    </section>
-    <!-- proyects-->
-    <section class="project">
-      <div class="container">
-        <div class="project__title">
-          <div class="project__title--text">
-            <h1 class="text-left">Proyectos</h1>
-            <div class="line__vertical-05"></div>
-            <h5 class="text-left">Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo.</h5>
-          </div>
-        </div>
-        <div class="row project__box">
-          <div class="col-md-4 col-12">
-            <div class="ok"></div>
-            <h4>Lorem ipsum dolor</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab, voluptate tempore enim sed maiores odio vitae explicabo eum velit fugit minus nostrum quibusdam delectus hic fuga doloribus mollitia exercitationem?</p><a class="d-flex justify-content-end" href="#">
-              <button class="btn btn-outline-secondary" type="button">Ver</button></a>
-          </div>
-          <div class="col-md-4 col-12">
-            <div class="ok"></div>
-            <h4>Lorem ipsum dolor</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab, voluptate tempore enim sed maiores odio vitae explicabo eum velit fugit minus nostrum quibusdam delectus hic fuga doloribus mollitia exercitationem?</p><a class="d-flex justify-content-end" href="#">
-              <button class="btn btn-outline-secondary" type="button">Ver</button></a>
-          </div>
-          <div class="col-md-4 col-12">
-            <div class="ok"></div>
-            <h4>Lorem ipsum dolor</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab, voluptate tempore enim sed maiores odio vitae explicabo eum velit fugit minus nostrum quibusdam delectus hic fuga doloribus mollitia exercitationem?</p><a class="d-flex justify-content-end" href="#">
-              <button class="btn btn-outline-secondary" type="button">Ver</button></a>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- contact 1
+    section.contact
+    include components/contact_1.pug
+    
+    -->
+    <!-- proyects
+    section.project
+    .container
+     .project__title
+      .project__title--text
+       h1.text-left Proyectos
+       .line__vertical-05
+       h5.text-left Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo.
+     .row.project__box
+      .col-md-4.col-12
+       .ok
+       h4 Lorem ipsum dolor
+       p Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab, voluptate tempore enim sed maiores odio vitae explicabo eum velit fugit minus nostrum quibusdam delectus hic fuga doloribus mollitia exercitationem?
+       a(href="#", class="d-flex justify-content-end")
+        button(type="button", class="btn btn-outline-secondary") Ver
+      .col-md-4.col-12
+       .ok
+       h4 Lorem ipsum dolor
+       p Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab, voluptate tempore enim sed maiores odio vitae explicabo eum velit fugit minus nostrum quibusdam delectus hic fuga doloribus mollitia exercitationem?
+       a(href="#", class="d-flex justify-content-end")
+        button(type="button", class="btn btn-outline-secondary") Ver
+      .col-md-4.col-12
+       .ok
+       h4 Lorem ipsum dolor
+       p Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ab, voluptate tempore enim sed maiores odio vitae explicabo eum velit fugit minus nostrum quibusdam delectus hic fuga doloribus mollitia exercitationem?
+       a(href="#", class="d-flex justify-content-end")
+        button(type="button", class="btn btn-outline-secondary") Ver
+    
+    -->
     <!-- Contact 2-->
     <section class="contact">
       <div class="container">
@@ -256,14 +244,14 @@
           <div class="col-md-8">
             <div class="contact-1__title">
               <div class="contact-1--text">
-                <h4 class="text-left">Lorem ipsum dolor ipsum dolor</h4>
+                <h4 class="text-left">Ya te mostramos nuestras soluciones, ¿y ahora que?</h4>
                 <div class="line__vertical-06"></div>
-                <h6 class="text-left">Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo. ornare varius diam eget, commodo.</h6>
+                <h6 class="text-left">Si te ha interesado nuestros servicios o tienes alguna duda, sin ningun compromiso te invitamos a contactarnos</h6>
               </div>
             </div>
           </div>
           <div class="col-md-3 offset-md-1 contact__btn"><a href="#">
-              <button class="btn btn-lighting" type="button">Contactenos</button></a></div>
+              <button class="btn btn-lighting" type="button">Contactar</button></a></div>
         </div>
       </div>
     </section>
