--- a/servicios.html
+++ b/servicios.html
@@ -345,14 +345,14 @@
           <div class="col-md-8">
             <div class="contact-1__title">
               <div class="contact-1--text">
-                <h4 class="text-left">Lorem ipsum dolor ipsum dolor</h4>
+                <h4 class="text-left">Ya te mostramos nuestras soluciones, ¿y ahora que?</h4>
                 <div class="line__vertical-06"></div>
-                <h6 class="text-left">Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo. ornare varius diam eget, commodo.</h6>
+                <h6 class="text-left">Si te ha interesado nuestros servicios o tienes alguna duda, sin ningun compromiso te invitamos a contactarnos</h6>
               </div>
             </div>
           </div>
           <div class="col-md-3 offset-md-1 contact__btn"><a href="#">
-              <button class="btn btn-lighting" type="button">Contactenos</button></a></div>
+              <button class="btn btn-lighting" type="button">Contactar</button></a></div>
         </div>
       </div>
     </section>
