Services responsive page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="hero__title">
             <div class="hero__title--text">
               <h1 class="text-left">Lleva tu marca al<br/>siguiente nivel</h1>
-              <h6>Nos dedicamos a diseñar y desarrollar productos increíbles para la web y llevar a tu marca al siguiente nivel. Haremos que tu marca sea memorable para las personas y u punto de referencia para tu industria.</h6><a href="#">
+              <h6>Nos dedicamos a diseñar y desarrollar productos increíbles para la web y llevar a tu marca al siguiente nivel. Haremos que tu marca sea memorable para las personas y un punto de referencia para tu industria.</h6><a href="#">
                 <button class="btn btn-primary" type="button">contáctenos</button></a>
             </div>
           </div>
@@ -54,7 +54,7 @@
       <div class="container-fluid">
         <div class="row categories__title">
           <div class="col-sm-9 col-12 categories__title--text">
-            <h1 class="text--left">Diseñamos identidad corporativa, paginás web, y más!</h1>
+            <h1 class="text--left">Diseñamos identidad corporativa, páginas web, y más!</h1>
             <div class="line__vertical-01"></div>
             <h6>Creamos diseños y desarrollo web que este a la altura de tu negocio. Presiona en la imagen para ver los pack que ofrecemos en cada categoría</h6>
           </div>
@@ -103,7 +103,7 @@
                 <div class="us__title--text">
                   <h1 class="text--left">Nos gusta crear</h1>
                   <div class="line__vertical-02"></div>
-                  <h6>Hey! Somos el equipo de monlogo, nos dedidacamos a crear la imagen de una marca, tanto en la web como de forma fisica, tenemos la misión de hacer que tu marca logre llegar a muchas más personas y sea más acecible.</h6>
+                  <h6>Hey! Somos el equipo de monlogo, nos dedidacamos a crear la imagen de una marca, tanto en la web como de forma fisica, tenemos la misión de hacer que tu marca logre llegar a muchas más personas y sea más accesible.</h6>
                   <h6>Nuestra filosofia de trabajo es que crear junto al cliente un producto satisfactorio.</h6><a href="#">
                     <button class="btn btn-secondary" type="button">ver más</button></a>
                 </div>
@@ -128,9 +128,9 @@
             <div class="container">
               <div class="row">
                 <div class="col-md-7 col-10 offset-1 offset-md-0 pb-3">
-                  <h6 class="text-sm-left text-center">Si tienes dudas, aqui abajo hemos dejado algunas preguntas con sus respectivas respectivas respuestas.</h6>
+                  <h6 class="text-sm-left text-center">Si tienes dudas, aqui abajo hemos dejado algunas preguntas con sus respectivas respuesta, si su pregunta no está en las que están abajo, le invitamos a contactarnos</h6>
                   <ul class="wow faq-list fadeInUp" id="faq-list" style="visibility: visible; animation-name: fadeInUp;">
-                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq1">¿Porque elegir a monlogo?</a>
+                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq1">¿Porqué elegir a monlogo?</a>
                       <div class="collapse" id="faq1">
                         <p>
                           La marca comercial es el signo con que 
@@ -157,7 +157,7 @@
                         </p>
                       </div>
                     </li>
-                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq4">¿Cuál es la metodología de pago? ¿Comó pago?</a>
+                    <li><a class="collapsed aqui" data-toggle="collapse" href="#faq4">¿Cuál es la metodología de pago? ¿Y comó pago?</a>
                       <div class="collapse" id="faq4">
                         <p>
                           La marca comercial es el signo con que 
